--- a/arch/arm64/boot/dts/mediatek/mt6893.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6893.dtsi
@@ -3722,14 +3722,18 @@
 		};
 
 		mtk_mdla: mdla@19036000 {
-			compatible = "mediatek, mt6873-mdla";
-			core_num = <1>;
-			reg = <0 0x19034000 0 0x1000>,   /* dla0 config  */
-			      <0 0x19036000 0 0x1000>,   /* dla0 command */
-			      <0 0x19035000 0 0x1000>,   /* dla0 biu     */
-			      <0 0x1d000000 0 0x100000>, /* GSM,TODO     */
+			compatible = "mediatek, mt6893-mdla";
+			core_num = <2>;
+			reg = <0 0x19034000 0 0x1000>,  /* dla0 config  */
+			      <0 0x19036000 0 0x1000>,  /* dla0 command */
+			      <0 0x19035000 0 0x1000>,  /* dla0 biu     */
+			      <0 0x19038000 0 0x1000>,  /* dla1 config  */
+			      <0 0x1903a000 0 0x1000>,  /* dla1 command */
+			      <0 0x19039000 0 0x1000>,  /* dla1 biu     */
+			      <0 0x1d000000 0 0x100000>,/* GSM,TODO      */
 			      <0 0x19020000 0 0x40000>;  /* APU CONN     */
-			interrupts = <GIC_SPI 414 IRQ_TYPE_LEVEL_HIGH 0>;
+			interrupts = <GIC_SPI 413 IRQ_TYPE_LEVEL_HIGH 0>,
+				     <GIC_SPI 414 IRQ_TYPE_LEVEL_HIGH 0>;
 		};
 
 		apu_mdla1_clk: syscon@19038000 {
