--- a/arch/arm64/boot/dts/mediatek/mt6359p.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6359p.dtsi
@@ -480,14 +480,21 @@
 		};
 
 		mt6359p_clock_buffer: mt6359p_clock_buffer {
-			compatible = "mediatek,mt6359p-clock-buffer";
-			pmic-xo-exist = <1 1 1 1 0 1 1>;
-			pmic-xo-set-clr = <0 9>;
-			pmic-xo-name = "SOC", "WCN", "NFC",
-				"CEL", "AUD", "PD", "EXT";
-			pmic-auxout-xo = <6 6 6 6 0xffff 6 6>;
-			pmic-auxout-bblpm-en = <27>;
-			pmic-auxout-bblpm-o = <39>;
+			compatible = "mediatek,clock_buffer";
+			mediatek,xo-buf-support = <1 1 1 1 0 0 1>;
+			mediatek,xo-buf-allow-control = <0 1 1 1 0 0 1>;
+			mediatek,xo-buf-name = "XO_SOC", "XO_WCN", "XO_NFC",
+						"XO_CEL", "NAN", "NAN",
+						"XO_EXT";
+			mediatek,bblpm-support;
+			mediatek,hwbblpm-support;
+			mediatek,xo-voter-support;
+			mediatek,dcxo-de-sense-support;
+			mediatek,dcxo-impedance-support;
+
+			mediatek,enable;
+
+			clkbuf_ctl = <&clock_buffer_ctrl>;
 		};
 
 		mtk_dynamic_loading_throttling {
