--- a/arch/arm64/boot/dts/mediatek/mt6893.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6893.dtsi
@@ -1115,38 +1115,25 @@
 			reg = <0 0x10006000 0 0x100>;
 		};
 
-		srclken-ctrl@10006500 {
-			compatible = "mediatek,srclken-spm";
+		srclken_rc: srclken-rc@10006500 {
+			compatible = "mediatek,srclken-rc";
 			reg = <0 0x10006500 0 0x100>,
 				<0 0x10006E00 0 0x100>;
-			reg-names = "cfg", "sta";
+			mediatek,subsys-ctl = "suspend", "rf", "dpidle",
+					"md", "gps", "bt",
+					"wifi", "mcu", "coant",
+					"nfc", "ufs", "scp",
+					"rsv";
+			suspend-ctl = "XO_SOC";
+			rf-ctl = "XO_CEL";
+			dpidle-ctl = "XO_SOC";
+			gps-ctl = "XO_WCN";
+			bt-ctl = "XO_WCN";
+			wifi-ctl = "XO_WCN";
+			mcu-ctl = "XO_WCN";
+			nfc-ctl = "XO_NFC";
 
-			cfg-ext = "central-4", "sw-con", "protocol-chk",
-				"dbg-cfg";
-			sta-ext = "timer-l-sta", "timer-m-sta";
-
-			trace-l-offset = <0x0 0x4 0x4 0x8 0x8 0x8 0x8 0x8>;
-			trace-m-offset = <0x0 0x4 0x8 0x8 0x8 0x8 0x8 0x8>;
-		};
-
-		srclken: srclken@10006500 {
-			compatible = "mediatek,srclken";
-			reg = <0 0x105c4000 0 0x1000>,
-				<0 0x10005000 0 0x1000>;
-			reg-names = "scpdvfs", "gpio";
-			mediatek,bring-up = "disable";
-			srclken-mode = "full-set";
-			subsys = "SUSPEND", "RF", "DPIDLE",
-				"MD", "GPS", "BT",
-				"WIFI", "MCU", "COANT",
-				"NFC", "UFS", "SCP",
-				"RSV";
-
-			scp-vreq-cfg = <0x54>;
-			scp-rc-vreq-bit = <27 28>;
-			gpio-dir-cfg = <0x0>;
-			gpio-dout-cfg = <0x100>;
-			gpio-pull-bit = <6>;
+			mediatek,enable;
 		};
 
 		watchdog: watchdog@10007000 {
@@ -5529,19 +5516,23 @@
 		};
 
 		clock_buffer_ctrl: clock_buffer_ctrl {
-			compatible = "mediatek,clock_buffer";
+			compatible = "mediatek,clock_buffer_ctrl";
 			mediatek,clkbuf-quantity = <7>;
 			mediatek,clkbuf-config = <2 1 1 2 0 0 1>;
 			mediatek,clkbuf-output-impedance = <6 6 4 6 0 0 4>;
 			mediatek,clkbuf-controls-for-desense = <0 4 0 4 0 0 0>;
-			mediatek,bring-up = "disable";
-			mediatek,bblpm-support = "enable";
+			mediatek,xo-buf-hwbblpm-mask = <1 0 0 0 0 0 0>;
+			mediatek,xo-buf-hwbblpm-bypass = <0 0 0 1 0 0 0>;
+			mediatek,clkbuf-conn-inf-target = "XO_WCN";
+			mediatek,clkbuf-nfc-inf-target = "XO_NFC";
+			//mediatek,clkbuf-kernel-init;
+			mediatek,xo-nfc = <0>;
 
-			pwrap-dcxo-en = <0x188 0 0x188 1 0x188 0>;
-			pwrap-dcxo-cfg = <0x18c 0x19c>;
-			spm-pwr-status = <0x180 0 0x180 1>;
-			pwrap = <&pwrap>;
-			sleep = <&sleep>;
+			mediatek,enable;
+
+			pmif = <&pwrap 0>,
+				<&spmi 0>;
+			srclken_rc = <&srclken_rc>;
 		};
 	};
 
