[ALPS05549212] arm64: configs: mt6893: enable new clkbuf driver
enable new clkbuf driver.

MTK-Commit-Id: 8866a810c12c9a68712786d21f4a31da81b74ce3

Change-Id: I544d22ecf9c25dddbaf562fa3d9da6cbbf39a5ca
Signed-off-by: RenTing Wang <ren-ting.wang@mediatek.com>
CR-Id: ALPS05549212
Feature: [Module]Clock Buffer

--- a/arch/arm64/configs/k6893v1_64_defconfig
+++ b/arch/arm64/configs/k6893v1_64_defconfig
@@ -30,8 +30,12 @@ CONFIG_COMMON_CLK_MT6893_VDECSYS=m
 CONFIG_COMMON_CLK_MT6893_VDECSYS_SOC=m
 CONFIG_COMMON_CLK_MT6893_VENCSYS_C1=m
 CONFIG_COMMON_CLK_MT6893_VENCSYS=m
+CONFIG_MT6359P_CLKBUF=y
 CONFIG_MTK_CMDQ=m
+CONFIG_MTK_CLKBUF=m
+CONFIG_MTK_CLKBUF_V1=y
 CONFIG_MTK_SCPSYS=m
+CONFIG_MTK_SRCLKEN_RC_V1=y
 CONFIG_DEVAPC_MT6885=m
 CONFIG_SCSI_UFS_MEDIATEK=m
 CONFIG_SCSI_UFS_MEDIATEK_DBG=m
@@ -39,10 +43,6 @@ CONFIG_SERIAL_8250_NR_UARTS=2
 CONFIG_SERIAL_8250_RUNTIME_UARTS=2
 CONFIG_SERIAL_8250_MT6577=m
 CONFIG_MTK_UART_APDMA=m
-CONFIG_MTK_CLK_BUFFER=m
-CONFIG_MTK_CLKBUF_BBLPM=y
-CONFIG_MTK_CLKBUF_NFC=y
-CONFIG_MTK_SRCLKEN_RC=m
 CONFIG_USB_MTU3=m
 CONFIG_PHY_MTK_TPHY=m
 CONFIG_MTK_PMIC_WRAP=m
