[ALPS05557104] aee: fix build error while enable aee
1. Can not find aee.h
2. Missing header file

MTK-Commit-Id: 2e47f26fec1a7946fe58969b83402fad8cc739fa

Change-Id: I78090bed662011d4bd742d7334f2699f4fd91140
Signed-off-by: zhiyong.wang <zhiyong.wang@mediatek.com>
CR-Id: ALPS05557104
Feature: Android Exception Engine(AEE)

--- a/drivers/gpu/mediatek/gpu_mali/mali_valhall/mali-r25p0/drivers/gpu/arm/midgard/platform/mt6893/Kbuild
+++ b/drivers/gpu/mediatek/gpu_mali/mali_valhall/mali-r25p0/drivers/gpu/arm/midgard/platform/mt6893/Kbuild
@@ -28,6 +28,7 @@ mali_kbase-y += \
 
 ccflags-y += \
 	-I$(srctree)/drivers/misc/mediatek/base/power/include
+ccflags-y += -I$(srctree)/drivers/misc/mediatek/include/mt-plat
 
 ifeq ($(CONFIG_MTK_TINYSYS_SSPM_SUPPORT), y)
 ccflags-y += -I$(srctree)/drivers/misc/mediatek/sspm/v2/
