[ALPS05557104] aee:arm64:configs: enable aee
Enable aee kernel config to support reboot exception.

MTK-Commit-Id: cd0e59fade692e715ca6467fb9fae5dfda3ab387

Change-Id: I5e6cccedfc46b45efe3ea6091eeebd2a2e30a4e3
Signed-off-by: zhiyong.wang <zhiyong.wang@mediatek.com>
CR-Id: ALPS05557104
Feature: Android Exception Engine(AEE)

--- a/arch/arm64/configs/k6893v1_64_defconfig
+++ b/arch/arm64/configs/k6893v1_64_defconfig
@@ -123,4 +123,6 @@ CONFIG_MTK_GPS_SUPPORT=y
 CONFIG_MTK_GPS_EMI=m
 CONFIG_MTK_FMRADIO=m
 CONFIG_MTK_FM_CHIP="MT6635_FM"
-
+CONFIG_MTK_AEE_FEATURE=m
+CONFIG_MTK_AEE_AED=m
+CONFIG_MTK_AEE_IPANIC=m
