[ALPS05532221] arm64: dts: mt6893: ad bt definition
porting driver code for kernel-5.10

MTK-Commit-Id: cc4be223f9d201858a72c457f35cf7cd5d764b95

Change-Id: I9cd8da1a90f4ecee3e4a528d966cff4995ac640a
CR-Id: ALPS05532221
Feature: BT Chipset Capability
Signed-off-by: mtk10871 <yu-min.lin@mediatek.com>

--- a/arch/arm64/boot/dts/mediatek/mt6893.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6893.dtsi
@@ -2004,6 +2004,32 @@
 			clock-names = "btifc","apdmac";
 		};
 
+		bt: bt@18000000 {
+			compatible = "mediatek,bt";
+				/* conn_infra_rgu */
+			reg = <0 0x18000000 0 0x1000>,
+				/* conn_infra_cfg */
+				<0 0x18001000 0 0x1000>,
+				/* sys ram */
+				<0 0x18050000 0 0x1000>,
+				/* conn_host_csr_top */
+				<0 0x18060000 0 0x1000>,
+				/* bgfsys base */
+				<0 0x18800000 0 0x1000>,
+				/* bgfsys hw info base */
+				<0 0x18812000 0 0x1000>,
+				/* coninfra cfg ao */
+				<0 0x10001000 0 0x1000>;
+				/* coninfra ccif base */
+				/* <0 0x10003300 0 0x100>, */
+				/* bgf2md base */
+				/* <0 0x1025C000 0 0x100>; */
+				/* Rx Interrupt */
+			interrupts = <GIC_SPI 376 IRQ_TYPE_LEVEL_HIGH 0>,
+				/* Assert & FW log interrupt */
+				<GIC_SPI 377 IRQ_TYPE_LEVEL_HIGH 0>;
+		};
+
 		disp_pwm: pwm@1100e000 {
 			compatible = "mediatek,disp_pwm0",
 					"mediatek,mt6873-disp-pwm";
