[ALPS05558678] arm64: configs: mt6893: support syscon reboot mode driver
Apply syscon-reboot-mode driver for reboot mode settings, and
it depends on the POWER_RESET config to build the driver under
the power/reset folder

MTK-Commit-Id: 24713625bf1262b62ab5268b62d8ba48337e30df

Change-Id: If75551682d3b4bd2e0fe6cebac8042895e2540d9
Signed-off-by: freddy.hsin <freddy.hsin@mediatek.com>
CR-Id: ALPS05558678
Feature: [Module]RGU (Reset Generator Unit)

--- a/arch/arm64/configs/k6893v1_64_defconfig
+++ b/arch/arm64/configs/k6893v1_64_defconfig
@@ -79,6 +79,7 @@ CONFIG_MTK_DVFSRC_DEVFREQ=m
 CONFIG_MTK_DVFSRC_HELPER=m
 CONFIG_MTK_DVFSRC_MET_MT6873=m
 CONFIG_SPI_MT65XX=m
+CONFIG_SYSCON_REBOOT_MODE=m
 CONFIG_MEDIATEK_MT6360_AUXADC=m
 CONFIG_CHARGER_MT6360=m
 CONFIG_MFD_MT6360=m
