--- a/arch/arm64/boot/dts/mediatek/mt6893.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6893.dtsi
@@ -590,7 +590,7 @@
 		wifi_mem: wifi-reserve-memory {
 			compatible = "shared-dma-pool";
 			no-map;
-			size = <0 0x600000>;
+			size = <0 0xf20000>;
 			alignment = <0 0x1000000>;
 			alloc-ranges = <0 0x40000000 0 0x80000000>;
 		};
@@ -5512,8 +5512,9 @@
 
 		wifi@18000000 {
 			compatible = "mediatek,wifi";
-			reg = <0 0x18000000 0 0x100000>;
-			interrupts = <GIC_SPI 376 IRQ_TYPE_LEVEL_HIGH 0>;
+			reg = <0 0x18000000 0 0x700000>;
+			interrupts = <GIC_SPI 375 IRQ_TYPE_LEVEL_HIGH 0>,
+				<GIC_SPI 378 IRQ_TYPE_LEVEL_HIGH 0>;
 			memory-region = <&wifi_mem>;
 		};
 
