[ALPS05179926] arm64: dts: mt6893: change type-c usb to fwnode format
Since device_connection is out of date, we chage it to
fwnode mechanism.

MTK-Commit-Id: fa55be304d5d8f53532bac1d2e37997985528173

Change-Id: Ibb78b1bd7237992c38f93bdbeb479a62f23b3c08
Signed-off-by: Eddie Hung <eddie.hung@mediatek.com>
CR-Id: ALPS05179926
Feature: USB TYPE-C

--- a/arch/arm64/boot/dts/mediatek/mt6893.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6893.dts
@@ -881,11 +881,16 @@
 
 	extcon_usb: extcon_usb {
 		compatible = "mediatek,extcon-usb";
-		dev-conn = <&ssusb>;
 		vbus-supply = <&otg_vbus>;
-		vbus-volt = <5000000>;
+		vbus-voltage = <5000000>;
+		vbus-current = <1800000>;
 		charger = <&mt6360_chg>;
 		mediatek,bypss-typec-sink = <1>;
+		port {
+			usb_role: endpoint@0 {
+				remote-endpoint = <&mtu3_drd_switch>;
+			};
+		};
 	};
 
 	pd_adapter: pd_adapter {
@@ -1395,5 +1400,13 @@
 	md_vsram-supply = <&mt6315_3_vbuck4>;
 	md_vnr-supply = <&mt6315_3_vbuck3>;
 	md_vdigrf-supply = <&mt6359p_vpu_reg>;
+};
+
+&ssusb {
+	port {
+		mtu3_drd_switch: endpoint@0 {
+			remote-endpoint = <&usb_role>;
+		};
+	};
 };
 
