--- a/arch/arm64/boot/dts/mediatek/mt6893.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6893.dtsi
@@ -2341,6 +2341,14 @@
 				reg = <0x114 0x4>;
 			};
 
+			u3_phy_data: u3_phy_data {
+				reg = <0x1AC 0x4>;
+			};
+
+			u2_phy_data: u2_phy_data {
+				reg = <0x1B0 0x4>;
+			};
+
 			lvts_e_data1: data1 {
 				reg = <0x1D0 0x10>;
 			};
@@ -2483,11 +2491,19 @@
 			u2port0: usb2-phy0@11e40000 {
 				reg = <0 0x11e40000 0 0x700>;
 				#phy-cells = <1>;
+				nvmem-cells = <&u2_phy_data>;
+				nvmem-cell-names = "intr_cal";
+				nvmem-cell-masks = <0x1f>;
 			};
 
 			u3port0: usb3-phy0@11e40700 {
 				reg = <0 0x11e40700 0 0x900>;
 				#phy-cells = <1>;
+				nvmem-cells = <&u3_phy_data>, <&u3_phy_data>,
+					<&u3_phy_data>;
+				nvmem-cell-names = "iext_intr_ctrl", "rx_impsel",
+					"tx_impsel";
+				nvmem-cell-masks = <0x1f 0x1f00 0x3f0000>;
 			};
 		};
 
