--- a/arch/arm64/boot/dts/mediatek/mt6893.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6893.dtsi
@@ -594,6 +594,14 @@
 			alignment = <0 0x1000000>;
 			alloc-ranges = <0 0x40000000 0 0x80000000>;
 		};
+
+		gps_mem: gps-reserve-memory {
+			compatible = "mediatek,gps-reserve-memory";
+			no-map;
+			size = <0 0x100000>;
+			alignment = <0 0x100000>;
+			alloc-ranges = <0 0x40000000 0 0x80000000>;
+		};
 	};
 
 	cache_parity {
@@ -5532,6 +5540,24 @@
 			interrupts = <GIC_SPI 375 IRQ_TYPE_LEVEL_HIGH 0>,
 				<GIC_SPI 378 IRQ_TYPE_LEVEL_HIGH 0>;
 			memory-region = <&wifi_mem>;
+		};
+
+		gps: gps@18C00000 {
+			compatible = "mediatek,mt6885-gps";
+			reg = <0 0x18000000 0 0x100000>,
+				<0 0x18C00000 0 0x100000>,
+				<0 0x10003304 0 0x4>,
+				<0 0x1001C018 0 0xC>;
+			reg-names = "conn_infra_base", "conn_gps_base",
+				"status_dummy_cr", "tia_gps";
+			interrupts = <GIC_SPI 383 IRQ_TYPE_LEVEL_HIGH 0>,
+				<GIC_SPI 384 IRQ_TYPE_LEVEL_HIGH 0>,
+				<GIC_SPI 385 IRQ_TYPE_LEVEL_HIGH 0>,
+				<GIC_SPI 386 IRQ_TYPE_LEVEL_HIGH 0>,
+				<GIC_SPI 387 IRQ_TYPE_LEVEL_HIGH 0>,
+				<GIC_SPI 388 IRQ_TYPE_LEVEL_HIGH 0>,
+				<GIC_SPI 389 IRQ_TYPE_LEVEL_HIGH 0>;
+			memory-region = <&gps_mem>;
 		};
 
 		consys: consys@18000000 {
