[ALPS05463487] arm64: configs: mt6893: lcd-backlight
enable lcd-backlight

MTK-Commit-Id: 6245c94ae63e427da0fe1b971349d369dc25e23b

Change-Id: Ic47ba9c724a2ebeed60a8d6f1010e1febdd26226
Signed-off-by: YC <yu-chang.wang@mediatek.com>
CR-Id: ALPS05463487
Feature: [Module]Kernel Maintenance

--- a/arch/arm64/configs/k6893v1_64_defconfig
+++ b/arch/arm64/configs/k6893v1_64_defconfig
@@ -68,6 +68,7 @@ CONFIG_THERMAL_EMERGENCY_POWEROFF_DELAY_MS=100
 CONFIG_THERMAL_WRITABLE_TRIPS=y
 CONFIG_THERMAL_EMULATION=y
 CONFIG_GENERIC_ADC_THERMAL=m
+CONFIG_PWM_MTK_DISP=m
 CONFIG_LEDS_PWM=m
 CONFIG_LEDS_REGULATOR_VIBRATOR=m
 CONFIG_I2C_MT65XX=m
