--- a/sound/soc/mediatek/Kconfig
+++ b/sound/soc/mediatek/Kconfig
@@ -113,6 +113,28 @@ config SND_SOC_MT6873_MT6359P
 	  Select Y if you have such device.
 	  If unsure select "N".
 
+config SND_SOC_MT6885
+	tristate "ASoC support for Mediatek MT6885 chip"
+	depends on ARCH_MEDIATEK
+	select SND_SOC_MEDIATEK
+	select SND_SOC_MTK_SRAM
+	select SND_SOC_MTK_SMART_PHONE
+	help
+	  This adds ASoC driver for Mediatek MT6885 boards
+	  that can be used with other codecs.
+	  Select Y if you have such device.
+	  If unsure select "N".
+
+config SND_SOC_MT6885_MT6359P
+	tristate "ASoc Audio driver for MT6885 with MT6359P codec"
+	depends on SND_SOC_MT6885
+	select SND_SOC_MT6359P
+	help
+	  This adds ASoC driver for Mediatek MT6885 boards
+	  with the MT6359P codecs.
+	  Select Y if you have such device.
+	  If unsure select "N".
+
 config SND_SOC_MT8173
 	tristate "ASoC support for Mediatek MT8173 chip"
 	depends on ARCH_MEDIATEK
