[ALPS05549845] arm64: configs: mt6893: enable audio
enable audio related option

MTK-Commit-Id: 791c0a20d3e86ab9f7faf8ae32daf86bf4e7c555

Change-Id: Ic755e37fcbbb86ade766864f97fea10a9b067673
Signed-off-by: Celine Liu <celine.liu@mediatek.com>
CR-Id: ALPS05549845
Feature: [Module]Audio Kernel

--- a/arch/arm64/configs/k6893v1_64_defconfig
+++ b/arch/arm64/configs/k6893v1_64_defconfig
@@ -129,3 +129,6 @@ CONFIG_MTK_AEE_FEATURE=m
 CONFIG_MTK_AEE_AED=m
 CONFIG_MTK_AEE_IPANIC=m
 CONFIG_EXTCON_MTK_USB=m
+CONFIG_SND_SOC_TFA9874=m
+CONFIG_SND_SOC_MT6885=m
+CONFIG_SND_SOC_MT6885_MT6359P=m
