[ALPS05509518] ccci: add kernel configs
add ccci kernel configs for android S

MTK-Commit-Id: 8ec4ae9dd533159b2390582da547d20c478ee461

Change-Id: Ib44a429a2b49dbba17a73476a04dd14b86211178
Signed-off-by: Weiqiang Hao <weiqiang.hao@mediatek.com>
CR-Id: ALPS05509518
Feature: Modem Interface Driver

--- a/arch/arm64/configs/k6893v1_64_defconfig
+++ b/arch/arm64/configs/k6893v1_64_defconfig
@@ -132,3 +132,7 @@ CONFIG_EXTCON_MTK_USB=m
 CONFIG_SND_SOC_TFA9874=m
 CONFIG_SND_SOC_MT6885=m
 CONFIG_SND_SOC_MT6885_MT6359P=m
+CONFIG_MTK_CCCI_DEVICES=y
+CONFIG_MTK_MD1_SUPPORT=25
+CONFIG_MTK_ECCCI_DRIVER=m
+CONFIG_MTK_ECCCI_C2K=y
