[ALPS05083413] arm64: dts: mt6893: add xhci clock setting
Add usb host mode xhci clock setting

MTK-Commit-Id: 88f8b41f51dd6e0857ac1229d15d896f368e0095

Change-Id: I9cc86543a19b44d95c6bb40ca6a90cfbb98bef1b
Signed-off-by: Eddie Hung <eddie.hung@mediatek.com>
CR-Id: ALPS05083413
Feature: USB 3.0 Device

--- a/arch/arm64/boot/dts/mediatek/mt6893.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6893.dtsi
@@ -2224,6 +2224,8 @@
 				reg = <0 0x11200000 0 0x1000>;
 				reg-names = "mac";
 				interrupts = <GIC_SPI 97 IRQ_TYPE_LEVEL_HIGH 0>;
+				clocks = <&infracfg_ao_clk CLK_IFRAO_SSUSB_XHCI>;
+				clock-names = "sys_ck";
 				mediatek,keep-clock-on;
 				status = "okay";
 			};
