--- a/arch/arm64/configs/k6893v1_64_defconfig
+++ b/arch/arm64/configs/k6893v1_64_defconfig
@@ -1,138 +1,89 @@
 CONFIG_ARCH_MEDIATEK=y
-CONFIG_MTK_CMDQ_MBOX_EXT=m
-CONFIG_MEDIATEK_WATCHDOG=m
-CONFIG_MTK_DEVINFO=m
-CONFIG_COMMON_CLK_MT6893=m
-CONFIG_COMMON_CLK_MT6893_APU0=m
-CONFIG_COMMON_CLK_MT6893_APU1=m
-CONFIG_COMMON_CLK_MT6893_APU2=m
-CONFIG_COMMON_CLK_MT6893_APU_VCORE=m
-CONFIG_COMMON_CLK_MT6893_APU_CONN=m
-CONFIG_COMMON_CLK_MT6893_APU_MDLA0=m
-CONFIG_COMMON_CLK_MT6893_APU_MDLA1=m
-CONFIG_COMMON_CLK_MT6893_AUDIOSYS=m
-CONFIG_COMMON_CLK_MT6893_CAMSYS_MAIN=m
-CONFIG_COMMON_CLK_MT6893_CAMSYS_RAWA=m
-CONFIG_COMMON_CLK_MT6893_CAMSYS_RAWB=m
-CONFIG_COMMON_CLK_MT6893_CAMSYS_RAWC=m
-CONFIG_COMMON_CLK_MT6893_IMGSYS1=m
-CONFIG_COMMON_CLK_MT6893_IMGSYS2=m
-CONFIG_COMMON_CLK_MT6893_IMP_IIC_WRAP_C=m
-CONFIG_COMMON_CLK_MT6893_IMP_IIC_WRAP_E=m
-CONFIG_COMMON_CLK_MT6893_IMP_IIC_WRAP_N=m
-CONFIG_COMMON_CLK_MT6893_IMP_IIC_WRAP_S=m
-CONFIG_COMMON_CLK_MT6893_IPESYS=m
-CONFIG_COMMON_CLK_MT6893_MDPSYS=m
-CONFIG_COMMON_CLK_MT6893_MFGCFG=m
-CONFIG_COMMON_CLK_MT6893_MMSYS=m
-CONFIG_COMMON_CLK_MT6893_SCP_ADSP=m
-CONFIG_COMMON_CLK_MT6893_VDECSYS=m
-CONFIG_COMMON_CLK_MT6893_VDECSYS_SOC=m
-CONFIG_COMMON_CLK_MT6893_VENCSYS_C1=m
-CONFIG_COMMON_CLK_MT6893_VENCSYS=m
-CONFIG_MT6359P_CLKBUF=y
-CONFIG_MTK_CMDQ=m
-CONFIG_MTK_CLKBUF=m
+CONFIG_MTK_CLKBUF=y
 CONFIG_MTK_CLKBUF_V1=y
-CONFIG_MTK_SCPSYS=m
+CONFIG_MT6359P_CLKBUF=y
 CONFIG_MTK_SRCLKEN_RC_V1=y
-CONFIG_DEVAPC_MT6885=m
-CONFIG_SCSI_UFS_MEDIATEK=m
-CONFIG_SCSI_UFS_MEDIATEK_DBG=m
-CONFIG_SERIAL_8250_NR_UARTS=2
-CONFIG_SERIAL_8250_RUNTIME_UARTS=2
-CONFIG_SERIAL_8250_MT6577=m
-CONFIG_MTK_UART_APDMA=m
-CONFIG_USB_MTU3=m
-CONFIG_PHY_MTK_TPHY=m
-CONFIG_MTK_PMIC_WRAP=m
-CONFIG_MFD_MT6397=m
-CONFIG_REGULATOR_MT6315=m
-CONFIG_REGULATOR_MT6359P=m
-CONFIG_MT635X_EFUSE=m
-CONFIG_MEDIATEK_MT6577_AUXADC=m
-CONFIG_MEDIATEK_MT635X_AUXADC=m
-CONFIG_SPMI_MTK_PMIF=m
-CONFIG_MFD_MTK_SPMI_PMIC=m
+CONFIG_MTK_DVFSRC_HELPER=y
+CONFIG_MTK_DVFSRC_MET_MT6873=y
+CONFIG_MTK_IOMMU_MISC=y
+CONFIG_MTK_IOMMU_MISC_DBG=y
+CONFIG_MTK_CMDQ_MBOX_EXT=y
+CONFIG_MMPROFILE=y
+CONFIG_MTK_AEE_FEATURE=y
+CONFIG_MTK_AEE_AED=y
+CONFIG_MTK_AEE_IPANIC=y
+CONFIG_MTK_CCCI_DEVICES=y
+CONFIG_MTK_MD1_SUPPORT=25
+CONFIG_MTK_ECCCI_DRIVER=y
+CONFIG_MTK_ECCCI_C2K=y
+CONFIG_MTK_BTIF=y
+CONFIG_MTK_COMBO=y
+CONFIG_MTK_COMBO_CHIP_CONSYS_6893=y
+CONFIG_MTK_COMBO_BT=y
+CONFIG_MTK_COMBO_GPS=y
+CONFIG_MTK_COMBO_WIFI=y
+CONFIG_MTK_DHCPV6C_WIFI=y
+CONFIG_MTK_GPS_SUPPORT=y
+CONFIG_MTK_GPS_EMI=y
+CONFIG_MTK_FMRADIO=y
+CONFIG_MTK_FM_CHIP="MT6635_FM"
+CONFIG_MTK_CONNSYS_DEDICATED_LOG_PATH=y
+CONFIG_TCPC_CLASS=y
+CONFIG_USB_POWER_DELIVERY=y
+CONFIG_TCPC_MT6360=y
+CONFIG_EXTCON_MTK_USB=y
+CONFIG_KEYBOARD_MTK_KPD=y
+CONFIG_KEYBOARD_MTK_PMIC=y
 # CONFIG_PINCTRL_MT2712 is not set
 # CONFIG_PINCTRL_MT6797 is not set
-CONFIG_PINCTRL_MT6885=m
+CONFIG_PINCTRL_MT6885=y
 # CONFIG_PINCTRL_MT7622 is not set
 # CONFIG_PINCTRL_MT8173 is not set
 # CONFIG_PINCTRL_MT8183 is not set
 # CONFIG_PINCTRL_MT8516 is not set
 # CONFIG_PINCTRL_MT6397 is not set
-CONFIG_KEYBOARD_MTK_KPD=m
-CONFIG_KEYBOARD_MTK_PMIC=m
-CONFIG_THERMAL_EMERGENCY_POWEROFF_DELAY_MS=100
-CONFIG_THERMAL_WRITABLE_TRIPS=y
-CONFIG_THERMAL_EMULATION=y
-CONFIG_GENERIC_ADC_THERMAL=m
-CONFIG_PWM_MTK_DISP=m
-CONFIG_LEDS_PWM=m
-CONFIG_LEDS_REGULATOR_VIBRATOR=m
-CONFIG_I2C_MT65XX=m
-CONFIG_MTK_DVFSRC=m
-CONFIG_REGULATOR_MTK_DVFSRC=m
-CONFIG_INTERCONNECT_MTK=y
-CONFIG_INTERCONNECT_MTK_EMI=m
-CONFIG_MTK_DVFSRC_DEVFREQ=m
-CONFIG_MTK_DVFSRC_HELPER=m
-CONFIG_MTK_DVFSRC_MET_MT6873=m
-CONFIG_SPI_MT65XX=m
-CONFIG_SYSCON_REBOOT_MODE=m
-CONFIG_MEDIATEK_MT6360_AUXADC=m
-CONFIG_CHARGER_MT6360=m
-CONFIG_MFD_MT6360=m
-CONFIG_REGULATOR_MT6360=m
-CONFIG_MTK_CHARGER=m
-CONFIG_MTK_PUMP_EXPRESS_PLUS_20_SUPPORT=m
-CONFIG_MTK_PUMP_EXPRESS_PLUS_SUPPORT=m
-CONFIG_MTK_PUMP_EXPRESS_40_SUPPORT=m
-CONFIG_RESET_TI_SYSCON=m
-CONFIG_MTK_THERMAL=y
-CONFIG_MTK_SOC_THERMAL_LVTS=m
-CONFIG_MTK_PMIC_THERMAL=m
-CONFIG_MTK_MD_THERMAL=m
-CONFIG_MTK_THERMAL_TRACE=m
-CONFIG_TCPC_CLASS=m
-CONFIG_TCPC_MT6360=m
-CONFIG_USB_POWER_DELIVERY=m
-CONFIG_MTK_CHARGER_TYPE_DETECT=m
-CONFIG_TOUCHSCREEN_MTK_TOUCH="GT9896S"
-CONFIG_RTC_DRV_MT6397=m
-CONFIG_MTK_ION_MM_HEAP=m
-CONFIG_MTK_IOMMU=m
-CONFIG_MTK_IOMMU_MISC=m
-CONFIG_MTK_IOMMU_MISC_DBG=m
-CONFIG_DRM_MEDIATEK=m
+CONFIG_SYSCON_REBOOT_MODE=y
+CONFIG_MTK_CHARGER_TYPE_DETECT=y
+CONFIG_MTK_CHARGER=y
+CONFIG_MTK_PUMP_EXPRESS_PLUS_SUPPORT=y
+CONFIG_MTK_PUMP_EXPRESS_PLUS_20_SUPPORT=y
+CONFIG_MTK_PUMP_EXPRESS_40_SUPPORT=y
+CONFIG_MFD_MT6397=y
 CONFIG_DRM_MEDIATEK_V2=y
-CONFIG_DRM_FBDEV_EMULATION=y
-CONFIG_MMPROFILE=m
-CONFIG_DRM_PANEL_TRULY_TD4330_VDO=m
-CONFIG_DRM_PANEL_TRULY_FT8756_VDO=m
-CONFIG_MTK_GPU_SUPPORT=m
+CONFIG_MTK_GPU_SUPPORT=y
 CONFIG_MTK_GPU_VERSION="mali valhall r25p0 mt6893"
-CONFIG_MTK_BTIF=m
-CONFIG_MTK_COMBO=m
-CONFIG_MTK_COMBO_CHIP_CONSYS_6893=y
-CONFIG_MTK_COMBO_BT=m
-CONFIG_MTK_COMBO_GPS=m
-CONFIG_MTK_COMBO_WIFI=m
-CONFIG_MTK_CONNSYS_DEDICATED_LOG_PATH=y
-CONFIG_MTK_DHCPV6C_WIFI=y
-CONFIG_MTK_GPS_SUPPORT=y
-CONFIG_MTK_GPS_EMI=m
-CONFIG_MTK_FMRADIO=m
-CONFIG_MTK_FM_CHIP="MT6635_FM"
-CONFIG_MTK_AEE_FEATURE=m
-CONFIG_MTK_AEE_AED=m
-CONFIG_MTK_AEE_IPANIC=m
-CONFIG_EXTCON_MTK_USB=m
-CONFIG_SND_SOC_TFA9874=m
-CONFIG_SND_SOC_MT6885=m
-CONFIG_SND_SOC_MT6885_MT6359P=m
-CONFIG_MTK_CCCI_DEVICES=y
-CONFIG_MTK_MD1_SUPPORT=25
-CONFIG_MTK_ECCCI_DRIVER=m
-CONFIG_MTK_ECCCI_C2K=y
+CONFIG_COMMON_CLK_MT6893=y
+CONFIG_COMMON_CLK_MT6893_APU0=y
+CONFIG_COMMON_CLK_MT6893_APU1=y
+CONFIG_COMMON_CLK_MT6893_APU2=y
+CONFIG_COMMON_CLK_MT6893_APU_VCORE=y
+CONFIG_COMMON_CLK_MT6893_APU_CONN=y
+CONFIG_COMMON_CLK_MT6893_APU_MDLA0=y
+CONFIG_COMMON_CLK_MT6893_APU_MDLA1=y
+CONFIG_COMMON_CLK_MT6893_AUDIOSYS=y
+CONFIG_COMMON_CLK_MT6893_CAMSYS_MAIN=y
+CONFIG_COMMON_CLK_MT6893_CAMSYS_RAWA=y
+CONFIG_COMMON_CLK_MT6893_CAMSYS_RAWB=y
+CONFIG_COMMON_CLK_MT6893_CAMSYS_RAWC=y
+CONFIG_COMMON_CLK_MT6893_IMGSYS1=y
+CONFIG_COMMON_CLK_MT6893_IMGSYS2=y
+CONFIG_COMMON_CLK_MT6893_IMP_IIC_WRAP_C=y
+CONFIG_COMMON_CLK_MT6893_IMP_IIC_WRAP_E=y
+CONFIG_COMMON_CLK_MT6893_IMP_IIC_WRAP_N=y
+CONFIG_COMMON_CLK_MT6893_IMP_IIC_WRAP_S=y
+CONFIG_COMMON_CLK_MT6893_IPESYS=y
+CONFIG_COMMON_CLK_MT6893_MDPSYS=y
+CONFIG_COMMON_CLK_MT6893_MFGCFG=y
+CONFIG_COMMON_CLK_MT6893_MMSYS=y
+CONFIG_COMMON_CLK_MT6893_SCP_ADSP=y
+CONFIG_COMMON_CLK_MT6893_VDECSYS=y
+CONFIG_COMMON_CLK_MT6893_VDECSYS_SOC=y
+CONFIG_COMMON_CLK_MT6893_VENCSYS_C1=y
+CONFIG_COMMON_CLK_MT6893_VENCSYS=y
+CONFIG_MTK_IOMMU=y
+CONFIG_MTK_CMDQ=y
+CONFIG_MTK_DVFSRC=y
+CONFIG_MTK_PMIC_WRAP=y
+CONFIG_DEVAPC_MT6885=y
+CONFIG_RESET_TI_SYSCON=y
+CONFIG_PHY_MTK_TPHY=y
