[ALPS05587438] arm64: dts: mediatek: add infracfg_ao_mem for dpmaif
add "mediatek,infracfg_ao_mem" for dpmaif driver.

MTK-Commit-Id: 006dbd9315aae793d0ddc9ebabdc6df26241ec9e

Change-Id: Idf0ab45635b0fc89082641f6737d41b02d96a188
Signed-off-by: Weiqiang Hao <weiqiang.hao@mediatek.com>
CR-Id: ALPS05587438
Feature: Modem Interface Driver

--- a/arch/arm64/boot/dts/mediatek/mt6893.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6893.dtsi
@@ -1024,6 +1024,11 @@
 			};
 		};
 
+		infracfg_ao_mem@10002000 {
+			compatible = "mediatek,infracfg_ao_mem";
+			reg = <0 0x10002000 0 0x1000>;
+		};
+
 		pericfg: pericfg@10003000 {
 			compatible = "mediatek,mt8192-pericfg", "syscon";
 			reg = <0 0x10003000 0 0x1000>;
