[ALPS03654198] ftrace:ftrace migration
ftrace migration

MTK-Commit-Id: 2efef2653129ea34e38be2462a3405cb6272e112

Change-Id: I8631d076da41d3944123b7733ca9986b96b334ea
CR-Id: ALPS03654198
Feature: System Performance
Signed-off-by: Andress Kuo <andress.kuo@mediatek.com>

--- a/kernel/trace/Makefile
+++ b/kernel/trace/Makefile
@@ -96,3 +96,5 @@ obj-$(CONFIG_BOOTTIME_TRACING) += trace_boot.o
 obj-$(CONFIG_TRACEPOINT_BENCHMARK) += trace_benchmark.o
 
 libftrace-y := ftrace.o
+
+obj-$(CONFIG_TRACING) += mtk_trace.o
