[ALPS05598337] arm64: configs: mt6893: enable tmem feature
enable trusted memory driver and ssmr

MTK-Commit-Id: af51b098cf26be95527ff59399983df8d59a700c

Change-Id: Icb39e24ea8c18c22920e9c961a2be6a224ce04a6
Signed-off-by: Walter-zh Wu <walter-zh.wu@mediatek.com>
CR-Id: ALPS05598337
Feature: Trusted Memory Subsystem(trusted_mem)

--- a/arch/arm64/configs/k6893v1_64_defconfig
+++ b/arch/arm64/configs/k6893v1_64_defconfig
@@ -92,6 +92,7 @@ CONFIG_MTK_PUMP_EXPRESS_40_SUPPORT=m
 CONFIG_RESET_TI_SYSCON=m
 CONFIG_MTK_THERMAL=y
 CONFIG_MTK_SOC_THERMAL_LVTS=m
+CONFIG_MTK_TRUSTED_MEMORY_SUBSYSTEM=m
 CONFIG_MTK_PMIC_THERMAL=m
 CONFIG_MTK_MD_THERMAL=m
 CONFIG_MTK_THERMAL_TRACE=m
