--- a/drivers/gpu/mediatek/Makefile
+++ b/drivers/gpu/mediatek/Makefile
@@ -22,11 +22,11 @@ export MTK_PLATFORM = $(word 4,$(MTK_GPU_VERSION))
 endif
 
 ifeq ($(MTK_PLATFORM),mt6873)
-subdir-ccflags-y += -DCONFIG_MACH_MT6873
+subdir-ccflags-y += -DCONFIG_GPU_MT6873
 else ifeq ($(MTK_PLATFORM),mt6893)
-subdir-ccflags-y += -DCONFIG_MACH_MT6893
+subdir-ccflags-y += -DCONFIG_GPU_MT6893
 else ifeq ($(MTK_PLATFORM),mt6853)
-subdir-ccflags-y += -DCONFIG_MACH_MT6853
+subdir-ccflags-y += -DCONFIG_GPU_MT6853
 endif
 
 ifneq ($(CONFIG_MTK_GPU_SUPPORT),)
