[ALPS05549792] mdp: add engine dispatch
[Detail]
1. Update engine
2. Update IOMMU header

MTK-Commit-Id: dee608314ff8f253feedc3097c3c7aeaa3a3d585

Change-Id: I92616343c1d8e81e20ce823d6db4203143fcbc22
Signed-off-by: Juju Sung <juju.sung@mediatek.com>
CR-Id:ALPS05549792
Feature:[Module]MDP Driver

--- a/drivers/misc/mediatek/mdp/Makefile
+++ b/drivers/misc/mediatek/mdp/Makefile
@@ -69,6 +69,7 @@ mdp_drv-y := mdp_driver.o \
 
 mdp_drv-$(CONFIG_MTK_MDP_MT6873) += mdp_mt6873.o
 mdp_drv-$(CONFIG_MTK_MDP_MT6853) += mdp_mt6853.o
+mdp_drv-$(CONFIG_MTK_MDP_MT6893) += mdp_mt6893.o
 #obj-y += cmdq_prof.o
 #obj-y += cmdq_test.o
 
