[ALPS05495186] GPU: EB kernel driver porting
[Detail]
EB kernel driver porting

MTK-Commit-Id: c6345a432175cd69573560a0772684f69546f100

Change-Id: Ie4965a53f517f0c1848e5eff456a0d60a25d73a0
CR-Id: ALPS05495186
Feature: GPU Extension(gpu_extension)

--- a/drivers/gpu/mediatek/Makefile
+++ b/drivers/gpu/mediatek/Makefile
@@ -30,10 +30,11 @@ subdir-ccflags-y += -DCONFIG_GPU_MT6853
 endif
 
 ifneq ($(CONFIG_MTK_GPU_SUPPORT),)
-	obj-y += ged/
-	obj-y += hal/
-	obj-y += gpufreq_v1/
-	#obj-y += gpu_bm/
+    obj-y += ged/
+    obj-y += hal/
+    obj-y += gpufreq_v1/
+    #obj-y += gpueb/
+    #obj-y += gpu_bm/
 
 # GPU R5P0
 ifeq ($(CONFIG_MTK_GPU_R5P0),y)
