[ALPS05602279] arch: arm64: configs : enable mdp
Enable MDP configs in k6893 projects

MTK-Commit-Id: 0b6cc95b93af93b1d6bf7dda69ffa4da4b64fe53

Change-Id: Icfb13217bbaa8068500d1150f727ae7b232098b6
Signed-off-by: Juju Sung <juju.sung@mediatek.com>
CR-Id:ALPS05602279
Feature:[Module]MDP Driver

--- a/arch/arm64/configs/k6893v1_64_defconfig
+++ b/arch/arm64/configs/k6893v1_64_defconfig
@@ -1,5 +1,7 @@
 CONFIG_ARCH_MEDIATEK=y
 CONFIG_MTK_CMDQ_MBOX_EXT=m
+CONFIG_MTK_MDP=m
+CONFIG_MTK_MDP_MT6893=m
 CONFIG_MEDIATEK_WATCHDOG=m
 CONFIG_MTK_DEVINFO=m
 CONFIG_COMMON_CLK_MT6893=m
