[ALPS05599694] GPU: Use general path to control gpufreq version
[Detail]
* Create gpu/mediatek/gpufreq/ which contains:
 - v1/, v2/, include/
* Use general header to lead version independent
 - gpufreq/include/mtk_gpufreq.h

MTK-Commit-Id: 7ec475f7b82556d1e9e1b97ff1686ecc70fafcc7

Change-Id: Ibf526f3dcb3e5ef8cb363f776631bbf8608b2e3c
Signed-off-by: Eric Chung <eric.chung@mediatek.com>
CR-Id: ALPS05599694
Feature: GPU Extension(gpu_extension)

--- a/drivers/gpu/mediatek/Makefile
+++ b/drivers/gpu/mediatek/Makefile
@@ -32,7 +32,7 @@ endif
 ifneq ($(CONFIG_MTK_GPU_SUPPORT),)
     obj-y += ged/
     obj-y += hal/
-    obj-y += gpufreq_v1/
+    obj-y += gpufreq/
     #obj-y += gpueb/
     #obj-y += gpu_bm/
 
