[ALPS05605222] arm64: configs: mediate: enable MTK_DRAM_LOG_STORE
Set log_store feature configure to m.

MTK-Commit-Id: 848ae4597cd0df1b0e303c7b9b5e8759678fe5b5

Change-Id: I51a360a31a2255d9fe25b06edbc0ceaa339a98e3
Signed-off-by: Chunlei Wang <chunlei.wang@mediatek.com>
CR-Id: ALPS05605222
Feature: Android Exception Engine(AEE)

--- a/arch/arm64/configs/k6893v1_64_defconfig
+++ b/arch/arm64/configs/k6893v1_64_defconfig
@@ -139,3 +139,6 @@ CONFIG_MTK_CCCI_DEVICES=y
 CONFIG_MTK_MD1_SUPPORT=25
 CONFIG_MTK_ECCCI_DRIVER=m
 CONFIG_MTK_ECCCI_C2K=y
+CONFIG_MTK_DRAM_LOG_STORE=m
+CONFIG_MTK_DRAM_LOG_STORE_ADDR=0x0011DF00
+CONFIG_MTK_DRAM_LOG_STORE_SIZE=0x100
