--- a/drivers/gpu/mediatek/gpu_mali/mali_valhall/mali-r30p0/drivers/gpu/arm/midgard/platform/mtk_platform_common/Kbuild
+++ b/drivers/gpu/mediatek/gpu_mali/mali_valhall/mali-r30p0/drivers/gpu/arm/midgard/platform/mtk_platform_common/Kbuild
@@ -5,5 +5,6 @@ curr := platform/mtk_platform_common
 mali_kbase-y += $(curr)/mtk_platform_common.o
 mali_kbase-y += $(curr)/mtk_gpu_dvfs.o
 mali_kbase-y += $(curr)/mtk_gpu_devfreq_governor.o
+mali_kbase-y += $(curr)/mtk_gpu_devfreq_thermal.o
 
 ccflags-y += -I$(srctree)/drivers/devfreq/
