[ALPS05608949] arm64: configs: mediatek: enable aee_core_forwarder
1. enable aee_core_forwarder kernel config

MTK-Commit-Id: 9dff2262adc3437e9d60fce15c3d7766db469a46

Change-Id: I2fd8883f877153ef6e4fa791f5b738d93692d52c
Signed-off-by: Huaiming Li <huaiming.li@mediatek.com>
CR-Id: ALPS05608949
Feature: Android Exception Engine(AEE)

--- a/kernel/configs/eng.config
+++ b/kernel/configs/eng.config
@@ -31,3 +31,4 @@ CONFIG_SLUB_DEBUG_ON=y
 CONFIG_KPROBES=y
 CONFIG_GCOV_KERNEL=y
 CONFIG_DYNAMIC_DEBUG=y
+CONFIG_STATIC_USERMODEHELPER_PATH="/system_ext/bin/aee_core_forwarder"
